remaning error fixed

--- a/index.html
+++ b/index.html
@@ -930,7 +930,7 @@
                   height="96" />
               </div> -->
             <div class="quote-classic-info">
-              <cite class="quote-classic-cite">Albert Webb</cite>
+              <cite class="quote-classic-cite">Vlcc Pampore</cite>
               <p class="quote-classic-caption">Regular Client</p>
             </div>
           </div>
@@ -945,7 +945,7 @@
                   height="96" />
               </div> -->
             <div class="quote-classic-info">
-              <cite class="quote-classic-cite">Kelly McMillan</cite>
+              <cite class="quote-classic-cite">Speedo Fitness Club</cite>
               <p class="quote-classic-caption">Regular Client</p>
             </div>
           </div>
@@ -960,7 +960,7 @@
                   height="96" />
               </div> -->
             <div class="quote-classic-info">
-              <cite class="quote-classic-cite">Harold Barnett</cite>
+              <cite class="quote-classic-cite">Gedi & Grub</cite>
               <p class="quote-classic-caption">Regular Client</p>
             </div>
           </div>
@@ -975,7 +975,7 @@
                   height="96" />
               </div> -->
             <div class="quote-classic-info">
-              <cite class="quote-classic-cite">Bill Warner</cite>
+              <cite class="quote-classic-cite">Nathu Sweets</cite>
               <p class="quote-classic-caption">Regular Client</p>
             </div>
           </div>
@@ -990,7 +990,7 @@
                   height="96" />
               </div> -->
             <div class="quote-classic-info">
-              <cite class="quote-classic-cite">Ann Lee</cite>
+              <cite class="quote-classic-cite">Wall Studio</cite>
               <p class="quote-classic-caption">Regular Client</p>
             </div>
           </div>
@@ -1006,7 +1006,7 @@
                   height="96" />
               </div> -->
             <div class="quote-classic-info">
-              <cite class="quote-classic-cite">Peter Clarkson</cite>
+              <cite class="quote-classic-cite">Vogue Studio</cite>
               <p class="quote-classic-caption">Regular Client</p>
             </div>
           </div>
@@ -1057,43 +1057,43 @@
           <div class="col-sm-5 col-md-7 col-lg-4">
             <h5 class="font-weight-bold text-uppercase text-white">Gallery</h5>
             <div class="row row-x-10" data-lightgallery="group">
-              <div class="col-3 col-sm-4 col-md-3"><a class="thumbnail-minimal" href="images/nathu.jpeg"
-                  data-lightgallery="item"><img class="thumbnail-minimal-image" src="images/nathu.jpeg"
+              <div class="col-3 col-sm-4 col-md-3" ><a class="thumbnail-minimal" href="images/n.jpeg"
+                  data-lightgallery="item"><img  style="border-radius: 5px;" class="thumbnail-minimal-image" src="images/n.jpeg"
                     alt="" />
                   <div class="thumbnail-minimal-caption"></div>
                 </a></div>
-              <div class="col-3 col-sm-4 col-md-3"><a class="thumbnail-minimal" href="images/gallery-original-2.jpg"
-                  data-lightgallery="item"><img class="thumbnail-minimal-image" src="images/footer-gallery-2-85x85.jpg"
+              <div class="col-3 col-sm-4 col-md-3"><a class="thumbnail-minimal" href="images/vlc.jpeg"
+                  data-lightgallery="item"><img style="border-radius: 5px;" class="thumbnail-minimal-image" src="images/vlcc4.jpeg"
                     alt="" />
                   <div class="thumbnail-minimal-caption"></div>
                 </a></div>
-              <div class="col-3 col-sm-4 col-md-3"><a class="thumbnail-minimal" href="images/gallery-original-3.jpg"
-                  data-lightgallery="item"><img class="thumbnail-minimal-image" src="images/footer-gallery-3-85x85.jpg"
+              <div class="col-3 col-sm-4 col-md-3"><a class="thumbnail-minimal" href="images/king.jpeg"
+                  data-lightgallery="item"><img   style="border-radius: 5px;" class="thumbnail-minimal-image" src="images/kings.jpeg"
                     alt="" />
                   <div class="thumbnail-minimal-caption"></div>
                 </a></div>
-              <div class="col-3 col-sm-4 col-md-3"><a class="thumbnail-minimal" href="images/gallery-original-4.jpg"
-                  data-lightgallery="item"><img class="thumbnail-minimal-image" src="images/footer-gallery-4-85x85.jpg"
+              <div class="col-3 col-sm-4 col-md-3"><a class="thumbnail-minimal" href="images/vin.png"
+                  data-lightgallery="item"><img  style="border-radius: 5px;" class="thumbnail-minimal-image" src="images/vin.png"
                     alt="" />
                   <div class="thumbnail-minimal-caption"></div>
                 </a></div>
-              <div class="col-3 col-sm-4 col-md-3"><a class="thumbnail-minimal" href="images/gallery-original-5.jpg"
-                  data-lightgallery="item"><img class="thumbnail-minimal-image" src="images/footer-gallery-5-85x85.jpg"
+              <div class="col-3 col-sm-4 col-md-3"><a class="thumbnail-minimal" href="images/speedo.jpeg"
+                  data-lightgallery="item"><img   style="border-radius: 5px;" class="thumbnail-minimal-image" src="images/f.jpeg"
                     alt="" />
                   <div class="thumbnail-minimal-caption"></div>
                 </a></div>
-              <div class="col-3 col-sm-4 col-md-3"><a class="thumbnail-minimal" href="images/gallery-original-6.jpg"
-                  data-lightgallery="item"><img class="thumbnail-minimal-image" src="images/footer-gallery-6-85x85.jpg"
+              <div class="col-3 col-sm-4 col-md-3"><a class="thumbnail-minimal" href="images/rise1.webp"
+                  data-lightgallery="item"><img  style="border-radius: 5px;" class="thumbnail-minimal-image" src="images/rise1.webp"
                     alt="" />
                   <div class="thumbnail-minimal-caption"> </div>
                 </a></div>
-              <div class="col-3 col-sm-4 col-md-3"><a class="thumbnail-minimal" href="images/gallery-original-7.jpg"
-                  data-lightgallery="item"><img class="thumbnail-minimal-image" src="images/footer-gallery-7-85x85.jpg"
+              <div class="col-3 col-sm-4 col-md-3"><a class="thumbnail-minimal" href="images/running.png"
+                  data-lightgallery="item"><img  style="border-radius: 5px;" class="thumbnail-minimal-image" src="images/running.png"
                     alt="" />
                   <div class="thumbnail-minimal-caption"></div>
                 </a></div>
-              <div class="col-3 col-sm-4 col-md-3"><a class="thumbnail-minimal" href="images/gallery-original-8.jpg"
-                  data-lightgallery="item"><img class="thumbnail-minimal-image" src="images/footer-gallery-8-85x85.jpg"
+              <div class="col-3 col-sm-4 col-md-3"><a class="thumbnail-minimal" href="images/hind.png"
+                  data-lightgallery="item"><img  style="border-radius: 5px;" class="thumbnail-minimal-image" src="images/hind.png"
                     alt="" />
                   <div class="thumbnail-minimal-caption"></div>
                 </a></div>
