--- a/our-services.html
+++ b/our-services.html
@@ -182,12 +182,33 @@
 		margin-left: 0;
 		max-width: none;
 	}
+  .iconicfill-check {
+    color: blue;
+    padding: 0 1em 0 1.5em;
+    margin: 0;
+}
   
 	.pricing-table {
 		display: block;
 		margin-left: 0;
 		width: auto;
 	}
+  .pricingTable-title{
+    font-size: 40px;
+  }
+  .pricingTable-subtitle{
+    font-size: 30px;
+  }
+
+}
+@media only screen and (max-width: 768px) {
+  
+  .pricingTable-title{
+    font-size: 20px;
+  }
+  .pricingTable-subtitle{
+    font-size: 15px;
+  }
 }
 
 
@@ -389,8 +410,8 @@
   
         <div class="pricing-table-wrapper"  >
           <div style="text-align: center;">
-            <h2 class="pricingTable-title" style="font-size: 40px; color: blue; margin-top: 30px;">Find a plan that's right for you.</h2>
-        <h3 class="pricingTable-subtitle" style="font-size: 30px; margin-top: 8px; color: blue;">Every plan has its own benefits.</h3>
+            <h2 class="pricingTable-title" style=" color: blue; margin-top: 30px;">Find a plan that's right for you.</h2>
+        <h3 class="pricingTable-subtitle" style=" margin-top: 8px; color: blue;">Every plan has its own benefits.</h3>
       </div>
         <div style="box-shadow: rgba(206, 9, 15, 15) 30px 30px 30px; margin-top: 20px; border-radius: 10px;">
           <div class="pricing-table pricing-monthly" style="background: linear-gradient(90deg, rgba(21,21,179,1) 35%, rgba(2,0,36,1) 100%); margin-top: 20px; box-shadow: rgba(0, 0, 0, 0.35) 0px 30px 30px;">
@@ -532,22 +553,46 @@
                     <div class="col-sm-5 col-md-7 col-lg-4">
                       <h5 class="font-weight-bold text-uppercase text-white">Gallery</h5>
                       <div class="row row-x-10" data-lightgallery="group">
-                        <div class="col-3 col-sm-4 col-md-3"><a class="thumbnail-minimal" href="images/gallery-original-1.jpg" data-lightgallery="item"><img class="thumbnail-minimal-image" src="images/footer-gallery-1-85x85.jpg" alt="">
-                            <div class="thumbnail-minimal-caption"></div></a></div>
-                        <div class="col-3 col-sm-4 col-md-3"><a class="thumbnail-minimal" href="images/gallery-original-2.jpg" data-lightgallery="item"><img class="thumbnail-minimal-image" src="images/footer-gallery-2-85x85.jpg" alt="">
-                            <div class="thumbnail-minimal-caption"></div></a></div>
-                        <div class="col-3 col-sm-4 col-md-3"><a class="thumbnail-minimal" href="images/gallery-original-3.jpg" data-lightgallery="item"><img class="thumbnail-minimal-image" src="images/footer-gallery-3-85x85.jpg" alt="">
-                            <div class="thumbnail-minimal-caption"></div></a></div>
-                        <div class="col-3 col-sm-4 col-md-3"><a class="thumbnail-minimal" href="images/gallery-original-4.jpg" data-lightgallery="item"><img class="thumbnail-minimal-image" src="images/footer-gallery-4-85x85.jpg" alt="">
-                            <div class="thumbnail-minimal-caption"></div></a></div>
-                        <div class="col-3 col-sm-4 col-md-3"><a class="thumbnail-minimal" href="images/gallery-original-5.jpg" data-lightgallery="item"><img class="thumbnail-minimal-image" src="images/footer-gallery-5-85x85.jpg" alt="">
-                            <div class="thumbnail-minimal-caption"></div></a></div>
-                        <div class="col-3 col-sm-4 col-md-3"><a class="thumbnail-minimal" href="images/gallery-original-6.jpg" data-lightgallery="item"><img class="thumbnail-minimal-image" src="images/footer-gallery-6-85x85.jpg" alt="">
-                            <div class="thumbnail-minimal-caption"> </div></a></div>
-                        <div class="col-3 col-sm-4 col-md-3"><a class="thumbnail-minimal" href="images/gallery-original-7.jpg" data-lightgallery="item"><img class="thumbnail-minimal-image" src="images/footer-gallery-7-85x85.jpg" alt="">
-                            <div class="thumbnail-minimal-caption"></div></a></div>
-                        <div class="col-3 col-sm-4 col-md-3"><a class="thumbnail-minimal" href="images/gallery-original-8.jpg" data-lightgallery="item"><img class="thumbnail-minimal-image" src="images/footer-gallery-8-85x85.jpg" alt="">
-                            <div class="thumbnail-minimal-caption"></div></a></div>
+                        <div class="col-3 col-sm-4 col-md-3" ><a class="thumbnail-minimal" href="images/n.jpeg"
+                            data-lightgallery="item"><img  style="border-radius: 5px;" class="thumbnail-minimal-image" src="images/n.jpeg"
+                              alt="" />
+                            <div class="thumbnail-minimal-caption"></div>
+                          </a></div>
+                        <div class="col-3 col-sm-4 col-md-3"><a class="thumbnail-minimal" href="images/vlc.jpeg"
+                            data-lightgallery="item"><img style="border-radius: 5px;" class="thumbnail-minimal-image" src="images/vlcc4.jpeg"
+                              alt="" />
+                            <div class="thumbnail-minimal-caption"></div>
+                          </a></div>
+                        <div class="col-3 col-sm-4 col-md-3"><a class="thumbnail-minimal" href="images/king.jpeg"
+                            data-lightgallery="item"><img   style="border-radius: 5px;" class="thumbnail-minimal-image" src="images/kings.jpeg"
+                              alt="" />
+                            <div class="thumbnail-minimal-caption"></div>
+                          </a></div>
+                        <div class="col-3 col-sm-4 col-md-3"><a class="thumbnail-minimal" href="images/vin.png"
+                            data-lightgallery="item"><img  style="border-radius: 5px;" class="thumbnail-minimal-image" src="images/vin.png"
+                              alt="" />
+                            <div class="thumbnail-minimal-caption"></div>
+                          </a></div>
+                        <div class="col-3 col-sm-4 col-md-3"><a class="thumbnail-minimal" href="images/speedo.jpeg"
+                            data-lightgallery="item"><img   style="border-radius: 5px;" class="thumbnail-minimal-image" src="images/f.jpeg"
+                              alt="" />
+                            <div class="thumbnail-minimal-caption"></div>
+                          </a></div>
+                        <div class="col-3 col-sm-4 col-md-3"><a class="thumbnail-minimal" href="images/rise1.webp"
+                            data-lightgallery="item"><img  style="border-radius: 5px;" class="thumbnail-minimal-image" src="images/rise1.webp"
+                              alt="" />
+                            <div class="thumbnail-minimal-caption"> </div>
+                          </a></div>
+                        <div class="col-3 col-sm-4 col-md-3"><a class="thumbnail-minimal" href="images/running.png"
+                            data-lightgallery="item"><img  style="border-radius: 5px;" class="thumbnail-minimal-image" src="images/running.png"
+                              alt="" />
+                            <div class="thumbnail-minimal-caption"></div>
+                          </a></div>
+                        <div class="col-3 col-sm-4 col-md-3"><a class="thumbnail-minimal" href="images/hind.png"
+                            data-lightgallery="item"><img  style="border-radius: 5px;" class="thumbnail-minimal-image" src="images/hind.png"
+                              alt="" />
+                            <div class="thumbnail-minimal-caption"></div>
+                          </a></div>
                       </div>
                     </div>
                   </div>
