--- a/contacts.html
+++ b/contacts.html
@@ -232,22 +232,46 @@
                     <div class="col-sm-5 col-md-7 col-lg-4">
                       <h5 class="font-weight-bold text-uppercase text-white">Gallery</h5>
                       <div class="row row-x-10" data-lightgallery="group">
-                        <div class="col-3 col-sm-4 col-md-3"><a class="thumbnail-minimal" href="images/gallery-original-1.jpg" data-lightgallery="item"><img class="thumbnail-minimal-image" src="images/footer-gallery-1-85x85.jpg" alt="">
-                            <div class="thumbnail-minimal-caption"></div></a></div>
-                        <div class="col-3 col-sm-4 col-md-3"><a class="thumbnail-minimal" href="images/gallery-original-2.jpg" data-lightgallery="item"><img class="thumbnail-minimal-image" src="images/footer-gallery-2-85x85.jpg" alt="">
-                            <div class="thumbnail-minimal-caption"></div></a></div>
-                        <div class="col-3 col-sm-4 col-md-3"><a class="thumbnail-minimal" href="images/gallery-original-3.jpg" data-lightgallery="item"><img class="thumbnail-minimal-image" src="images/footer-gallery-3-85x85.jpg" alt="">
-                            <div class="thumbnail-minimal-caption"></div></a></div>
-                        <div class="col-3 col-sm-4 col-md-3"><a class="thumbnail-minimal" href="images/gallery-original-4.jpg" data-lightgallery="item"><img class="thumbnail-minimal-image" src="images/footer-gallery-4-85x85.jpg" alt="">
-                            <div class="thumbnail-minimal-caption"></div></a></div>
-                        <div class="col-3 col-sm-4 col-md-3"><a class="thumbnail-minimal" href="images/gallery-original-5.jpg" data-lightgallery="item"><img class="thumbnail-minimal-image" src="images/footer-gallery-5-85x85.jpg" alt="">
-                            <div class="thumbnail-minimal-caption"></div></a></div>
-                        <div class="col-3 col-sm-4 col-md-3"><a class="thumbnail-minimal" href="images/gallery-original-6.jpg" data-lightgallery="item"><img class="thumbnail-minimal-image" src="images/footer-gallery-6-85x85.jpg" alt="">
-                            <div class="thumbnail-minimal-caption"> </div></a></div>
-                        <div class="col-3 col-sm-4 col-md-3"><a class="thumbnail-minimal" href="images/gallery-original-7.jpg" data-lightgallery="item"><img class="thumbnail-minimal-image" src="images/footer-gallery-7-85x85.jpg" alt="">
-                            <div class="thumbnail-minimal-caption"></div></a></div>
-                        <div class="col-3 col-sm-4 col-md-3"><a class="thumbnail-minimal" href="images/gallery-original-8.jpg" data-lightgallery="item"><img class="thumbnail-minimal-image" src="images/footer-gallery-8-85x85.jpg" alt="">
-                            <div class="thumbnail-minimal-caption"></div></a></div>
+                        <div class="col-3 col-sm-4 col-md-3" ><a class="thumbnail-minimal" href="images/n.jpeg"
+                            data-lightgallery="item"><img  style="border-radius: 5px;" class="thumbnail-minimal-image" src="images/n.jpeg"
+                              alt="" />
+                            <div class="thumbnail-minimal-caption"></div>
+                          </a></div>
+                        <div class="col-3 col-sm-4 col-md-3"><a class="thumbnail-minimal" href="images/vlc.jpeg"
+                            data-lightgallery="item"><img style="border-radius: 5px;" class="thumbnail-minimal-image" src="images/vlcc4.jpeg"
+                              alt="" />
+                            <div class="thumbnail-minimal-caption"></div>
+                          </a></div>
+                        <div class="col-3 col-sm-4 col-md-3"><a class="thumbnail-minimal" href="images/king.jpeg"
+                            data-lightgallery="item"><img   style="border-radius: 5px;" class="thumbnail-minimal-image" src="images/kings.jpeg"
+                              alt="" />
+                            <div class="thumbnail-minimal-caption"></div>
+                          </a></div>
+                        <div class="col-3 col-sm-4 col-md-3"><a class="thumbnail-minimal" href="images/vin.png"
+                            data-lightgallery="item"><img  style="border-radius: 5px;" class="thumbnail-minimal-image" src="images/vin.png"
+                              alt="" />
+                            <div class="thumbnail-minimal-caption"></div>
+                          </a></div>
+                        <div class="col-3 col-sm-4 col-md-3"><a class="thumbnail-minimal" href="images/speedo.jpeg"
+                            data-lightgallery="item"><img   style="border-radius: 5px;" class="thumbnail-minimal-image" src="images/f.jpeg"
+                              alt="" />
+                            <div class="thumbnail-minimal-caption"></div>
+                          </a></div>
+                        <div class="col-3 col-sm-4 col-md-3"><a class="thumbnail-minimal" href="images/rise1.webp"
+                            data-lightgallery="item"><img  style="border-radius: 5px;" class="thumbnail-minimal-image" src="images/rise1.webp"
+                              alt="" />
+                            <div class="thumbnail-minimal-caption"> </div>
+                          </a></div>
+                        <div class="col-3 col-sm-4 col-md-3"><a class="thumbnail-minimal" href="images/running.png"
+                            data-lightgallery="item"><img  style="border-radius: 5px;" class="thumbnail-minimal-image" src="images/running.png"
+                              alt="" />
+                            <div class="thumbnail-minimal-caption"></div>
+                          </a></div>
+                        <div class="col-3 col-sm-4 col-md-3"><a class="thumbnail-minimal" href="images/hind.png"
+                            data-lightgallery="item"><img  style="border-radius: 5px;" class="thumbnail-minimal-image" src="images/hind.png"
+                              alt="" />
+                            <div class="thumbnail-minimal-caption"></div>
+                          </a></div>
                       </div>
                     </div>
                   </div>
