--- a/our-services.html
+++ b/our-services.html
@@ -455,7 +455,7 @@
           <!--  end pricing-table -->
           <div class="pricing-table pricing-yearly popular" style="background: linear-gradient(90deg, rgba(21,21,179,1) 35%, rgba(2,0,36,1) 100%);margin-top: 20px;">
             <div class="pricing-table-header" style="box-shadow: rgba(231, 13, 13, 0.35) 0px 30px 30px;">
-              <h1 style="margin-bottom: 28px;">Professional</h1>
+              <h1 style="margin-bottom: 28px;">Advanced</h1>
               <h2><strong> <span >65,000 INR / 900 USD</span></strong>/Monthly</h2>
             </div>
             <!-- <div class="pricing-table-header">
