fixed services section

--- a/our-services.html
+++ b/our-services.html
@@ -329,56 +329,58 @@
             <div class="col-lg-12">
               <div class="owl-carousel owl-services">
                 <div class="item">
-                  <h4>Audio / Video Production.</h4>
+                  <h4>Audio / Video Production</h4>
                   <div class="icon"><img src="images/service-icon-01.png" alt=""></div>
                   <p>Complete Ad shoot and Ad's management on all the media platforms.</p>
                 </div>
                 <div class="item">
-                  <h4>Social Media Set-up & Management.</h4>
+                  <h4>Social Media Set-up & Management</h4>
                   <div class="icon"><img src="images/service-icon-02.png" alt=""></div>
                   <p style="color: black">White Shadow helps you in setting up your Social/Cloud Image on all me the media platforms.</p>
                 </div>
                 <div class="item">
-                  <h4>Designing / Editing & Printing.</h4>
+                  <h4>Designing / Editing & Printing</h4>
                   <div class="icon"><img src="images/service-icon-03.png" alt=""></div>
                   <p style="color: black;">Our creative team will be handling and creating the daily posts to keep the audience occupied.</p>
                 </div>
                 <div class="item">
                   <h4>E - Commerce.</h4>
-                  <div class="icon"><img src="images/service-icon-04.png" alt=""></div>
-                  <p style="color: black;">Feel free to use this template for your business</p>
-                </div>
-                <div class="item">
-                  <h4>Finance and Banking.</h4>
-                  <div class="icon"><img src="images/service-icon-01.png" alt=""></div>
-                  <p style="color: black;">Get to know more about the topic in details</p>
-                </div>
-                <div class="item">
-                  <h4>Hospitality & Travel.</h4>
-                  <div class="icon"><img src="images/service-icon-02.png" alt=""></div>
-                  <p style="color: black;">Get to know more about the topic in details</p>
-                </div>
-                <div class="item">
-                  <h4>Real Estate.</h4>
                   <div class="icon"><img src="images/service-icon-03.png" alt=""></div>
-                  <p style="color: black;">Feel free to use this template for your business</p>
+                  <p style="color: black;">Revolutionize your online presence with our cutting-edge E-Commerce solutions.</p>
                 </div>
                 <div class="item">
-                  <h4>Health Care.</h4>
-                  <div class="icon"><img src="images/service-icon-04.png" alt=""></div>
-                  <p style="color: black;" >Get to know more about the topic in details</p>
-                </div>
-                <div class="item">
-                  <h4>Education.</h4>
+                  <h4 style="color: #3366cc;">Finance and Banking.</h4>
                   <div class="icon"><img src="images/service-icon-01.png" alt=""></div>
-                  <p style="color: black;" >Get to know more about the topic in details</p>
-                </div>
-                <div class="item">
-                  <h4>Entertainment</h4>
-                  <div class="icon"><img src="images/service-icon-02.png" alt=""></div>
-                  <p style="color: black;" >Feel free to use this template for your business</p>
-                </div>
-                <div class="item">
+                  <p style="color: black;">Explore the intricacies of Finance and Banking unlock the power of financial insights.</p>
+              </div>
+              <div class="item">
+                <h4 style="color: #ff6600;">Hospitality & Travel</h4>
+                <div class="icon"><img src="images/service-icon-02.png" alt=""></div>
+                <p style="color: black;">Embark on a journey through the world of Hospitality & Travel discover the art of creating unforgettable experiences.</p>
+            </div>
+            
+            <div class="item">
+              <h4 style="color: #4CAF50;">Real Estate</h4>
+              <div class="icon"><img src="images/service-icon-03.png" alt=""></div>
+              <p style="color: black;">Unlock the doors to opportunity in Real Estate. Experience the timeless value of property investment.</p>
+          </div>
+          <div class="item">
+            <h4 style="color: #ff3333;">Health Care</h4>
+            <div class="icon"><img src="images/service-icon-04.png" alt=""></div>
+            <p style="color: black;">Delve into the world of Health Care. Discover the intricacies of well-being  because every step towards understanding is a step towards a healthier future.</p>
+        </div>
+        
+        <div class="item">
+          <h4 style="color: #0066cc;">Education</h4>
+          <div class="icon"><img src="images/service-icon-01.png" alt=""></div>
+          <p style="color: black;">Ignite the spark of knowledge with Education. Explore the depths of this transformative field  because every bit of knowledge opens doors to endless possibilities.</p>
+      </div>
+      <div class="item">
+        <h4 style="color: #ff9900;">Entertainment</h4>
+        <div class="icon"><img src="images/service-icon-02.png" alt=""></div>
+        <p style="color: black;">Step into the world of Entertainment. Unleash the power of joy and excitement to create experiences that captivate and inspire.</p>
+    </div>
+                <!-- <div class="item">
                   <h4>UI &amp; UX Design &amp; Development</h4>
                   <div class="icon"><img src="images/service-icon-03.png" alt=""></div>
                   <p style="color: black;">Get to know more about the topic in details</p>
@@ -387,7 +389,7 @@
                   <h4>Discover the digital marketing trend</h4>
                   <div class="icon"><img src="images/service-icon-04.png" alt=""></div>
                   <p style="color: black;">Get to know more about the topic in details</p>
-                </div>
+                </div> -->
               </div>
             </div>
           </div>
