--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
                   faces. Our knowledge and insights enable us to develop targeted campaigns that resonate with your
                   audience.</span></p>
               <div class="wow-outer button-outer"><a
-                  class="button button-md button-primary button-winona wow slideInDown" href="#"
+                  class="button button-md button-primary button-winona wow slideInDown" href="#jet"
                   data-wow-delay=".4s">View Projects</a></div>
             </div>
           </div>
@@ -609,7 +609,7 @@
 
 
     <!-- <div class="container" ></div> -->
-    <h1 class="pro">Project Section</h1>
+    <h1 class="pro" id="jet">Project Section</h1>
 
     <div class="Btns">
       <button id="all" class="active tab-btn" style="color: blue;">All</button>
