fixed all errors

--- a/about-us.html
+++ b/about-us.html
@@ -193,7 +193,7 @@
                   <h5 class="profile-creative-title"><a href="#">Mohd Amaan</a></h5>
                   <p class="profile-creative-position">Founder, White Shadow</p>
                   <div class="profile-creative-contacts">
-                    <div class="object-inline"><span class="icon novi-icon icon-md mdi mdi-phone"></span><a href="tel:#">1-800-1324-567</a></div>
+                    <div class="object-inline"><span class="icon novi-icon icon-md mdi mdi-phone"></span><a href="tel:+91 9906531735">+91 9906531735</a></div>
                   </div>
                   <p>Mohd Amaan founded our company in 1989 with a vision to help guests and residents of the USA to easily find and buy or rent real estate in all 50 states.</p>
                 </div>
@@ -362,7 +362,8 @@
                 <div class="container">
                   <div class="footer-advanced-layout" ><a class="brand" href="index.html"><img style="border-radius: 14px;"  src="images/shadow.png" alt="" width="115" height="34" style="border-radius: 12px;" srcset="images/whiteshadow.jpg 2x"/></a>
                     <!-- Rights-->
-                    <p class="rights"><span>&copy;&nbsp;</span><span class="copyright-year"></span> All Rights Reserved. Design by <a href="#">Azhar Ahmad</a></p>
+                    <p class="rights"><span>&copy;&nbsp;</span><span class="copyright-year"></span> All Rights Reserved. Designed
+                      by <a href="#" style="color:red; font-size: medium;">Azhar Ahmad</a></p>
                   </div>
                 </div>
               </div>
