--- a/our-services.html
+++ b/our-services.html
@@ -416,7 +416,7 @@
         <h3 class="pricingTable-subtitle" style=" margin-top: 8px; color: blue;">Every plan has its own benefits.</h3>
       </div>
         <div style="box-shadow: rgba(206, 9, 15, 15) 30px 30px 30px; margin-top: 20px; border-radius: 10px;">
-          <div class="pricing-table pricing-monthly" style="background: linear-gradient(90deg, rgba(21,21,179,1) 35%, rgba(2,0,36,1) 100%); margin-top: 20px; box-shadow: rgba(0, 0, 0, 0.35) 0px 30px 30px;">
+          <div class="pricing-table pricing-monthly wow slideInLeft" style="background: linear-gradient(90deg, rgba(21,21,179,1) 35%, rgba(2,0,36,1) 100%); margin-top: 20px; box-shadow: rgba(0, 0, 0, 0.35) 0px 30px 30px;">
             <div class="pricing-table-header">
               <h1>Basic </h1>
               <h2><strong>18,000 INR/250 USD</strong>/Monthly</h2>
@@ -456,7 +456,7 @@
 
           <!--  end pricing-table -->
           <div class="pricing-table pricing-yearly popular" style="background: linear-gradient(90deg, rgba(21,21,179,1) 35%, rgba(2,0,36,1) 100%);margin-top: 20px;">
-            <div class="pricing-table-header" style="box-shadow: rgba(231, 13, 13, 0.35) 0px 30px 30px;">
+            <div class="pricing-table-header wow slideInRight" style="box-shadow: rgba(231, 13, 13, 0.35) 0px 30px 30px;">
               <h1 style="margin-bottom: 28px;">Advanced</h1>
               <h2><strong> <span >65,000 INR / 900 USD</span></strong>/Monthly</h2>
             </div>
@@ -465,7 +465,7 @@
               <h2><strong> <span >65,000 INR / 900 USD</span></strong>/Monthly</h2>
               
             </div> -->
-            <div class="pricing-table-content" style="box-shadow: rgb(20, 121, 228) 0px 20px 30px -10px;">
+            <div class="pricing-table-content wow slideInRight" style="box-shadow: rgb(20, 121, 228) 0px 20px 30px -10px;">
               <ul class="pricing-details">
                 <li class="pricing-list"><span class="iconicfill-check"></span>Ads Spend - Rs 40,000</li>
                 <li class="pricing-list"><span class="iconicfill-check"></span>Our Management Fee - 25,000</li>
