--- a/about-us.html
+++ b/about-us.html
@@ -99,7 +99,7 @@ a {
 
 .text-blk.subHeadingText {
   font-style: italic;
-  color: blue;
+  /* color: blue; */
   font-size: 26px;
   line-height: 32px;
   font-weight: 700;
@@ -655,6 +655,8 @@ a {
                     </li>
                     <li class="rd-nav-item"><a class="rd-nav-link" href="contacts.html">Contactus</a>
                     </li>
+                    <li class="rd-nav-item"><a class="rd-nav-link" href="our-team.html">Team</a>
+                    </li>
                   </ul>
                 </div>
               </div>
@@ -668,7 +670,7 @@ a {
           <div class="container breadcrumbs-custom-container">
             <div class="breadcrumbs-custom-main">
               <h6 class="breadcrumbs-custom-subtitle title-decorated">About us</h6>
-              <h2 class="text-uppercase breadcrumbs-custom-title">About us</h2>
+              <h2 class="text-uppercase breadcrumbs-custom-title" >About us</h2>
             </div>
             <ul class="breadcrumbs-custom-path">
               <li><a href="index.html">Home</a></li>
@@ -778,7 +780,7 @@ a {
             <div class="col-md-10 col-lg-6 wow-outer">
               <!-- Profile Creative-->
               <article class="profile-creative wow slideInLeft">
-                <figure class="profile-creative-figure"><img class="profile-creative-image" src="images/team3.jpeg" alt="" width="270" height="273"/>
+                <figure class="profile-creative-figure"><img class="profile-creative-image" src="images/amaan.jpg" alt="" width="270" height="273"/>
                 </figure>
                 <div class="profile-creative-main">
                   <h5 class="profile-creative-title"><a href="#">Mohd Amaan</a></h5>
@@ -796,7 +798,7 @@ a {
                 <figure class="profile-creative-figure"><img class="profile-creative-image" src="images/team-2-270x273.jpg" alt="" width="270" height="273"/>
                 </figure>
                 <div class="profile-creative-main">
-                  <h5 class="profile-creative-title"><a href="#">John Thompson</a></h5>
+                  <h5 class="profile-creative-title"><a href="#">Humaira</a></h5>
                   <p class="profile-creative-position">Sales Associate</p>
                   <div class="profile-creative-contacts">
                     <div class="object-inline"><span class="icon novi-icon icon-md mdi mdi-phone"></span><a href="tel:#">1-800-1324-567</a></div>
@@ -811,7 +813,7 @@ a {
                 <figure class="profile-creative-figure"><img class="profile-creative-image" src="images/team-3-270x273.jpg" alt="" width="270" height="273"/>
                 </figure>
                 <div class="profile-creative-main">
-                  <h5 class="profile-creative-title"><a href="#">Brian Payne</a></h5>
+                  <h5 class="profile-creative-title"><a href="#">Soliha</a></h5>
                   <p class="profile-creative-position">Realtor</p>
                   <div class="profile-creative-contacts">
                     <div class="object-inline"><span class="icon novi-icon icon-md mdi mdi-phone"></span><a href="tel:#">1-800-1324-567</a></div>
@@ -826,7 +828,7 @@ a {
                 <figure class="profile-creative-figure"><img class="profile-creative-image" src="images/team-4-270x273.jpg" alt="" width="270" height="273"/>
                 </figure>
                 <div class="profile-creative-main">
-                  <h5 class="profile-creative-title"><a href="#">Marie Fernandez</a></h5>
+                  <h5 class="profile-creative-title"><a href="#">Sandy Singh</a></h5>
                   <p class="profile-creative-position">Broker</p>
                   <div class="profile-creative-contacts">
                     <div class="object-inline"><span class="icon novi-icon icon-md mdi mdi-phone"></span><a href="tel:#">1-800-1324-567</a></div>
