--- a/contacts.html
+++ b/contacts.html
@@ -75,6 +75,8 @@
                     </li>
                     <li class="rd-nav-item active"><a class="rd-nav-link" href="contacts.html">Contact us</a>
                     </li>
+                    <li class="rd-nav-item"><a class="rd-nav-link" href="our-team.html">Team</a>
+                    </li>
                   </ul>
                 </div>
               </div>
