--- a/our-services.html
+++ b/our-services.html
@@ -274,6 +274,8 @@
                     </li>
                     <li class="rd-nav-item"><a class="rd-nav-link" href="contacts.html">Contact us</a>
                     </li>
+                    <li class="rd-nav-item"><a class="rd-nav-link" href="our-team.html">Team</a>
+                    </li>
                   </ul>
                 </div>
               </div>
