--- a/about-us.html
+++ b/about-us.html
@@ -994,7 +994,7 @@ a {
                 <div class="container">
                   <div class="footer-advanced-layout" ><a class="brand" href="index.html"><img style="border-radius: 14px;"  src="images/shadow.png" alt="" width="115" height="34" style="border-radius: 12px;" srcset="images/whiteshadow.jpg 2x"/></a>
                     <!-- Rights-->
-                    <p class="rights"><span>&copy;&nbsp;</span><span class="copyright-year"></span> All Rights Reserved. Designed
+                    <p class="rights"><span>&copy;&nbsp;</span><span class="copyright-year"></span> All Rights Reserved. Design
                       by <a href="#" style="color:red; font-size: medium;">Azhar Ahmad</a></p>
                   </div>
                 </div>
