--- a/index.html
+++ b/index.html
@@ -919,7 +919,7 @@
         <div class="footer-advanced-layout"><a class="brand" href="index.html"><img style="border-radius: 14px;"
               src="images/shadow.png" alt="" width="115" height="34" srcset="images/whiteshadow.jpg 2x" /></a>
           <!-- Rights-->
-          <p class="rights"><span>&copy;&nbsp;</span><span class="copyright-year"></span> All Rights Reserved. Designed
+          <p class="rights"><span>&copy;&nbsp;</span><span class="copyright-year"></span> All Rights Reserved. Design
             by <a href="#" style="color:red; font-size: medium;">Azhar Ahmad</a></p>
         </div>
       </div>
