--- a/our-team.html
+++ b/our-team.html
@@ -62,7 +62,7 @@
     top:0px;
     width:10px;
     height:2px;
-    background-color:#ff9600;
+    background-color:black;
 }
 
 .sec-title .separator:after{
@@ -72,7 +72,7 @@
     top:0px;
     width:10px;
     height:2px;
-    background-color:#ff9600;
+    background-color:black;
 }
 
 .sec-title .separator span{
@@ -644,7 +644,7 @@
                 <div class="container" >
                   <div class="footer-advanced-layout"><a class="brand" href="index.html"><img style="border-radius: 14px;" src="images/whiteshadow.jpg" alt="" width="100" height="34" srcset="images/whiteshadow.jpg 2x"/></a>
                     <!-- Rights-->
-                    <p class="rights"><span>&copy;&nbsp;</span><span class="copyright-year"></span> All Rights Reserved. Designed
+                    <p class="rights"><span>&copy;&nbsp;</span><span class="copyright-year"></span> All Rights Reserved. Design
                       by <a href="#" style="color:red; font-size: medium;">Azhar Ahmad</a></p>
                   </div>
                 </div>
