--- a/about-us.html
+++ b/about-us.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="css/style.css" id="main-styles-link">
      <style>
       .responsive-container-block {
-        font-family: Nunito, sans-serif;
+        /* font-family: Nunito, sans-serif; */
   min-height: 75px;
   height: fit-content;
   width: 100%;
@@ -102,7 +102,7 @@ a {
   /* color: blue; */
   font-size: 26px;
   line-height: 32px;
-  font-weight: 700;
+  /* font-weight: 700; */
   margin-top: 0px;
   margin-right: 0px;
   margin-bottom: 15px;
@@ -880,8 +880,7 @@ a {
         </div>
       </section> 
       <!-- Page Footer-->
-      <!-- <a class="banner" href="https://www.templatemonster.com/intense-multipurpose-html-template.html" target="_blank"><img src="images/intense_big_02.jpg" alt=""/>
-      </a> -->
+      
             <footer class="section novi-background footer-advanced bg-gray-700" >
               <div class="footer-advanced-main">
                 <div class="container">
@@ -995,14 +994,13 @@ a {
                   <div class="footer-advanced-layout" ><a class="brand" href="index.html"><img style="border-radius: 14px;"  src="images/shadow.png" alt="" width="115" height="34" style="border-radius: 12px;" srcset="images/whiteshadow.jpg 2x"/></a>
                     <!-- Rights-->
                     <p class="rights"><span>&copy;&nbsp;</span><span class="copyright-year"></span> All Rights Reserved. Design
-                      by <a href="#" style="color:red; font-size: medium;">Azhar Ahmad</a></p>
+                      By <a href="#" style="color:red; font-size: medium;">Azhar Ahmad</a></p>
                   </div>
                 </div>
               </div>
             </footer>
     </div>
-    <!-- Global Mailform Output-->
-    <div class="snackbars" id="form-output-global"></div>
+   
     <!-- Javascript-->
     <script src="js/core.min.js"></script>
     <script src="js/script.js"></script>
