--- a/contacts.html
+++ b/contacts.html
@@ -314,14 +314,13 @@
                   <div class="footer-advanced-layout"><a class="brand" href="index.html"><img style="border-radius: 14px;" src="images/whiteshadow.jpg" alt="" width="115" height="34" srcset="images/whiteshadow.jpg 2x"/></a>
                     <!-- Rights-->
                     <p class="rights"><span>&copy;&nbsp;</span><span class="copyright-year"></span> All Rights Reserved. Design
-                      by <a href="#" style="color:red; font-size: medium;">Azhar Ahmad</a></p>
+                      By <a href="#" style="color:red; font-size: medium;">Azhar Ahmad</a></p>
                   </div>
                 </div>
               </div>
             </footer>
     </div>
-    <!-- Global Mailform Output-->
-    <div class="snackbars" id="form-output-global"></div>
+    
     <!-- Javascript-->
     <script src="js/core.min.js"></script>
     <script src="js/script.js"></script>
