--- a/our-team.html
+++ b/our-team.html
@@ -645,7 +645,7 @@
                   <div class="footer-advanced-layout"><a class="brand" href="index.html"><img style="border-radius: 14px;" src="images/whiteshadow.jpg" alt="" width="100" height="34" srcset="images/whiteshadow.jpg 2x"/></a>
                     <!-- Rights-->
                     <p class="rights"><span>&copy;&nbsp;</span><span class="copyright-year"></span> All Rights Reserved. Design
-                      by <a href="#" style="color:red; font-size: medium;">Azhar Ahmad</a></p>
+                      By <a href="#" style="color:red; font-size: medium;">Azhar Ahmad</a></p>
                   </div>
                 </div>
               </div>
