--- a/about-us.html
+++ b/about-us.html
@@ -592,9 +592,7 @@ a {
       </style>
   </head>
   <body>
-    <!-- <div class="ie-panel">
-      <a href="http://windows.microsoft.com/en-US/internet-explorer/"><img src="images/ie8-panel/warning_bar_0000_us.jpg" height="42" width="820" alt="You are using an outdated browser. For a faster, safer browsing experience, upgrade for free today."></a>
-    </div> -->
+   
     <div class="preloader">
       <div class="preloader-logo"><img src="images/whiteshadow.jpg" alt="" width="151" height="44" srcset="images/whiteshadow.jpg 2x"/>
       </div>
@@ -606,7 +604,7 @@ a {
     </div>
     <div class="page">
       <!-- Page Header-->
-      <!-- <a class="banner banner-top" href="https://www.templatemonster.com/intense-multipurpose-html-template.html" target="_blank"><img src="images/intense_02.jpg" alt=""/></a> -->
+     
       <header class="section novi-background page-header">
         <!-- RD Navbar-->
         <div class="rd-navbar-wrap">
@@ -682,7 +680,7 @@ a {
       <!-- Working at CaseCraft-->
       <div class="responsive-container-block bigContainer">
         <div class="responsive-container-block Container bottomContainer">
-          <div class="ultimateImg">
+          <div class="ultimateImg wow slideInRight">
             <img class="mainImg" src="/images/about1.jpeg">
             <!-- <div class="purpleBox">
               <p class="purpleText">
@@ -691,7 +689,7 @@ a {
               <img class="stars" src="https://workik-widget-assets.s3.amazonaws.com/widget-assets/images/mp5.svg">
             </div> -->
           </div>
-          <div class="allText bottomText">
+          <div class="allText bottomText wow slideInLeft">
             <p class="text-blk headingText" >
               About Us
             </p>
