--- a/our-team.html
+++ b/our-team.html
@@ -200,12 +200,12 @@
     -ms-transition:all 600ms ease;
     -o-transition:all 600ms ease;
     transition:all 600ms ease;
-    background-image: -ms-linear-gradient(top, #ffca08 0%, #f70067 100%);
-    background-image: -moz-linear-gradient(top, #ffca08 0%, #f70067 100%);
-    background-image: -o-linear-gradient(top, #ffca08 0%, #f70067 100%);
-    background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, #ffca08), color-stop(100, #f70067));
-    background-image: -webkit-linear-gradient(top, #ffca08 0%, #f70067 100%);
-    background-image: linear-gradient(to bottom, #ffca08 0%, #f70067 100%);
+    background-image: -ms-linear-gradient(top, #141413 0%, #131212 100%);
+    background-image: -moz-linear-gradient(top, #0a0801 0%, #171616 100%);
+    background-image: -o-linear-gradient(top, #0f0c02 0%, #171616 100%);
+    /* background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, #ffca08), color-stop(100, #f70067)); */
+    background-image: -webkit-linear-gradient(top, #0b0902 0%, #1d1b1c 100%);
+    background-image: linear-gradient(to bottom, #070600 0%, #1d1b1c 100%);
 }
 
 .team-block .inner-box:hover::after{
