--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 </head>
 
 <body>
-  <!-- <div class="preloader">
+  <div class="preloader">
     <div class="preloader-logo"><img src="images/whiteshadow.jpg" alt="" width="151" height="44"
         srcset="images/whiteshadow.jpg 2x" />
     </div>
@@ -134,7 +134,7 @@
         <div class="loadingProgressG" id="loadingProgressG_1"></div>
       </div>
     </div>
-  </div> -->
+  </div>
   <div class="page">
     <!-- Page Header-->
     <header class="section novi-background page-header">
