updated team section

--- a/about-us.html
+++ b/about-us.html
@@ -782,56 +782,58 @@ a {
                 </figure>
                 <div class="profile-creative-main">
                   <h5 class="profile-creative-title"><a href="#">Mohd Amaan</a></h5>
-                  <p class="profile-creative-position">Founder, White Shadow</p>
+                  <p class="profile-creative-position">Founder, White Shadow Networks</p>
                   <div class="profile-creative-contacts">
                     <div class="object-inline"><span class="icon novi-icon icon-md mdi mdi-phone"></span><a href="tel:+91 9906531735">+91 9906531735</a></div>
                   </div>
-                  <p>Mohd Amaan founded our company in 1989 with a vision to help guests and residents of the USA to easily find and buy or rent real estate in all 50 states.</p>
+                  <p>
+                  Mohd Amaan founded  white shadow networks in 2022 with a vision to excel in media and public relations, providing innovative solutions to help clients
+                </p>
                 </div>
               </article>
             </div>
             <div class="col-md-10 col-lg-6 wow-outer">
               <!-- Profile Creative-->
               <article class="profile-creative wow slideInLeft" data-wow-delay=".2s">
-                <figure class="profile-creative-figure"><img class="profile-creative-image" src="images/team-2-270x273.jpg" alt="" width="270" height="273"/>
+                <figure class="profile-creative-figure"><img class="profile-creative-image" src="images/sandy1.jpg" alt="" width="270" height="273"/>
                 </figure>
                 <div class="profile-creative-main">
-                  <h5 class="profile-creative-title"><a href="#">Humaira</a></h5>
-                  <p class="profile-creative-position">Sales Associate</p>
+                  <h5 class="profile-creative-title"><a href="#">Sandy Chauhan</a></h5>
+                  <p class="profile-creative-position">Director</p>
                   <div class="profile-creative-contacts">
-                    <div class="object-inline"><span class="icon novi-icon icon-md mdi mdi-phone"></span><a href="tel:#">1-800-1324-567</a></div>
+                    <div class="object-inline"><span class="icon novi-icon icon-md mdi mdi-phone"></span><a href="tel:+91 7710182001">+91 7710182001</a></div>
                   </div>
-                  <p>John has been in sales and marketing for the past 15 years. He has excellent knowledge about the local market both residential and commercial.</p>
+                  <p>Mr. Sandy is a renowned director with extensive experience in the media industry. With a wealth of knowledge and a proven track record, he has been a driving force behind numerous successful projects. </p>
                 </div>
               </article>
             </div>
             <div class="col-md-10 col-lg-6 wow-outer">
               <!-- Profile Creative-->
               <article class="profile-creative wow slideInLeft">
-                <figure class="profile-creative-figure"><img class="profile-creative-image" src="images/team-3-270x273.jpg" alt="" width="270" height="273"/>
+                <figure class="profile-creative-figure"><img class="profile-creative-image" src="images/udeen.jpg" alt="" width="270" height="273"/>
                 </figure>
                 <div class="profile-creative-main">
-                  <h5 class="profile-creative-title"><a href="#">Soliha</a></h5>
-                  <p class="profile-creative-position">Realtor</p>
+                  <h5 class="profile-creative-title"><a href="#">Udeen wani</a></h5>
+                  <p class="profile-creative-position">Co-Founder</p>
                   <div class="profile-creative-contacts">
-                    <div class="object-inline"><span class="icon novi-icon icon-md mdi mdi-phone"></span><a href="tel:#">1-800-1324-567</a></div>
+                    <div class="object-inline"><span class="icon novi-icon icon-md mdi mdi-phone"></span><a href="tel:91 7051203505">+91 7051203505</a></div>
                   </div>
-                  <p>Brian is not only a Licensed Realtor but also holds the Title Producers and Mortgage Licenses, which makes him a very knowledgeable real estate expert.</p>
+                  <p>Mr. Udeen Wani is a budding artist from the Kashmir Valley, featured in numerous songs that showcase his exceptional talent. With a passion for acting, he has become a prominent figure in the industry. </p>
                 </div>
               </article>
             </div>
             <div class="col-md-10 col-lg-6 wow-outer">
               <!-- Profile Creative-->
               <article class="profile-creative wow slideInLeft" data-wow-delay=".2s">
-                <figure class="profile-creative-figure"><img class="profile-creative-image" src="images/team-4-270x273.jpg" alt="" width="270" height="273"/>
+                <figure class="profile-creative-figure"><img class="profile-creative-image" src="images/owais.jpg" alt="" width="270" height="273"/>
                 </figure>
                 <div class="profile-creative-main">
-                  <h5 class="profile-creative-title"><a href="#">Sandy Singh</a></h5>
-                  <p class="profile-creative-position">Broker</p>
+                  <h5 class="profile-creative-title"><a href="#">Owais Reshi</a></h5>
+                  <p class="profile-creative-position">Producer</p>
                   <div class="profile-creative-contacts">
-                    <div class="object-inline"><span class="icon novi-icon icon-md mdi mdi-phone"></span><a href="tel:#">1-800-1324-567</a></div>
+                    <div class="object-inline"><span class="icon novi-icon icon-md mdi mdi-phone"></span><a href="tel:+91 9149830299">+91 9149830299</a></div>
                   </div>
-                  <p>Marie’s goal is to provide clients with the highest level of marketing expertise and customer service to help them reach their uppermost real estate goals.</p>
+                  <p>Mr. Owais Reshi is recognized as one of the most talented individuals in the industry, known for delivering excellent results and establishing remarkable records. With a proven track record of success. </p>
                 </div>
               </article>
             </div>
