--- a/about-us.html
+++ b/about-us.html
@@ -801,7 +801,7 @@ a {
                   <h5 class="profile-creative-title"><a href="#">Sandy Chauhan</a></h5>
                   <p class="profile-creative-position">Director</p>
                   <div class="profile-creative-contacts">
-                    <div class="object-inline"><span class="icon novi-icon icon-md mdi mdi-phone"></span><a href="tel:+91 7710182001">+91 7710182001</a></div>
+                    <!-- <div class="object-inline"><span class="icon novi-icon icon-md mdi mdi-phone"></span><a href="tel:+91 7710182001">+91 7710182001</a></div> -->
                   </div>
                   <p>Mr. Sandy is a renowned director with extensive experience in the media industry. With a wealth of knowledge and a proven track record, he has been a driving force behind numerous successful projects. </p>
                 </div>
