new cahnges added

--- a/about-us.html
+++ b/about-us.html
@@ -799,7 +799,7 @@ a {
                 </figure>
                 <div class="profile-creative-main">
                   <h5 class="profile-creative-title"><a href="#">Sandy Chauhan</a></h5>
-                  <p class="profile-creative-position">Director</p>
+                  <p class="profile-creative-position">Writer/Director</p>
                   <div class="profile-creative-contacts">
                     <!-- <div class="object-inline"><span class="icon novi-icon icon-md mdi mdi-phone"></span><a href="tel:+91 7710182001">+91 7710182001</a></div> -->
                   </div>
@@ -818,7 +818,7 @@ a {
                   <div class="profile-creative-contacts">
                     <div class="object-inline"><span class="icon novi-icon icon-md mdi mdi-phone"></span><a href="tel:91 7051203505">+91 7051203505</a></div>
                   </div>
-                  <p>Mr. Udeen Wani is a budding artist from the Kashmir Valley, featured in numerous songs that showcase his exceptional talent. With a passion for acting, he has become a prominent figure in the industry. </p>
+                  <p>Mr. Udeen Wani has been in the indian PR industry since a long time.he is the co-founder white shadow networks a PR agency in india specializing in corporate public realtions </p>
                 </div>
               </article>
             </div>
