--- a/contacts.html
+++ b/contacts.html
@@ -89,12 +89,12 @@
         <div class="breadcrumbs-custom-inner">
           <div class="container breadcrumbs-custom-container">
             <div class="breadcrumbs-custom-main">
-              <h6 class="breadcrumbs-custom-subtitle title-decorated">Contacts</h6>
-              <h2 class="text-uppercase breadcrumbs-custom-title">Contacts</h2>
+              <h6 class="breadcrumbs-custom-subtitle title-decorated">Contact Us</h6>
+              <h2 class="text-uppercase breadcrumbs-custom-title">Contact us</h2>
             </div>
             <ul class="breadcrumbs-custom-path">
               <li><a href="index.html">Home</a></li>
-              <li class="active">Contacts</li>
+              <li class="active">Contact Us</li>
             </ul>
           </div>
         </div>
@@ -114,7 +114,7 @@
             </div>
             <div class="layout-bordered-item wow-outer">
               <div class="layout-bordered-item-inner wow slideInUp">
-                <div class="icon novi-icon icon-lg mdi mdi-email text-primary"></div><a class="link-default" href="mailto:Mohmmad.amaan2@yahoo.in">Mohmmad.amaan2@yahoo.in</a>
+                <div class="icon novi-icon icon-lg mdi mdi-email text-primary"></div><a class="link-default" href="mailto: whiteshadowsxr@gmail.com">whiteshadowsxr@gmail.com</a>
               </div>
             </div>
             <div class="layout-bordered-item wow-outer">
