--- a/contacts.html
+++ b/contacts.html
@@ -57,7 +57,7 @@
                       </a></div>
                       <!-- <div class="unit-left"><span class="icon novi-icon icon-md icon-modern mdi mdi-map-marker"></span></div> -->
                       <!-- <div class="unit-body"><a class="link-default" href="tel:#">2130 Fulton Street <br> San Diego, CA 94117-1080</a></div> -->
-                    </article><a class="button button-gray-bordered button-winona" href="#">Request a call</a>
+                    </article><a class="button button-gray-bordered button-winona" href="contacts.html">Request a call</a>
                   </div>
                 </div>
               </div>
